# yuutrace

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish-npm.yml  publish-pypi.yml
design/: design.md
examples/: README.md  requirements.txt  weather_agent.py
scripts/: build_ui.sh
src/yuutrace/: __init__.py  context.py  cost.py  init.py  memory.py  otel.py  span.py  types.py  usage.py
src/yuutrace/cli/: __init__.py  db.py  main.py  server.py  ui.py
tests/: test_context.py
ui/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.lib.json  vite.config.lib.ts  vite.config.ts
ui/src/: app.tsx  index.ts  types.ts
ui/src/components/: ConversationFlow.tsx  ConversationList.tsx  CostSummary.tsx  LlmCard.tsx  SpanTimeline.tsx  ToolCard.tsx  UsageSummary.tsx
ui/src/hooks/: useTraceData.ts
ui/src/pages/: TracePage.tsx
ui/src/utils/: parse.ts
